--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,19 @@
     {
       "name": "Hugo van de Pol",
       "email": "hugo@tweedegolf.com"
+    },
+    {
+      "name": "Djuri Baars",
+      "email": "dsbaars@gmail.com"
     }
   ],
   "require": {
-    "php": "~5.4",
-    "symfony/symfony": "~2.3",
-    "symfony/swiftmailer-bundle": "~2.3"
+    "php": "<8.0 >=5.4",
+    "symfony/symfony": ">=2.3 <3.0",
+    "symfony/swiftmailer-bundle": ">=2.3 <3.0"
   },
   "require-dev": {
+    "ext-xdebug": ">=2.1.4",
     "fzaninotto/faker": "~1.4",
     "behat/behat": "~3.0",
     "behat/symfony2-extension": "~2.0@dev",
@@ -21,7 +26,9 @@
     "phpspec/phpspec": "~2.0",
     "bravesheep/phpspec-expect": "~0.1",
     "bravesheep/phpspec-extra-matchers": "~0.1",
-    "henrikbjorn/phpspec-code-coverage": "dev-master"
+    "henrikbjorn/phpspec-code-coverage": "^2.0",
+    "nick-jones/phpspec-matcher-loader-extension": "^1.0",
+    "phpunit/php-code-coverage": "^3"
   },
   "autoload": {
     "psr-4": {
